src/app.css
@import url('https://rsms.me/inter/inter.css');
@font-face {
	font-family: 'Parclo';
	font-weight: 900;
	font-display: swap;
	src: url('/fonts/ParcloSerif-ExtraBlack.woff') format('woff'),
		url('/fonts/ParcloSerif-ExtraBlack.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-style: italic;
	font-weight: 900;
	font-display: swap;
	src: url('/fonts/ParcloSerif-ExtraBlackItalic.woff') format('woff'),
		url('/fonts/ParcloSerif-ExtraBlackItalic.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-weight: 800;
	font-display: swap;
	src: url('/fonts/ParcloSerif-Black.woff') format('woff'),
		url('/fonts/ParcloSerif-Black.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-weight: 700;
	font-display: swap;
	src: url('/fonts/ParcloSerif-Bold.woff') format('woff'),
		url('/fonts/ParcloSerif-Bold.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-style: italic;
	font-weight: 700;
	font-display: swap;
	src: url('/fonts/ParcloSerif-BoldItalic.woff') format('woff'),
		url('/fonts/ParcloSerif-BoldItalic.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-style: normal;
	font-weight: 600;
	font-display: swap;
	src: url('/fonts/ParcloSerif-Medium.woff') format('woff'),
		url('/fonts/ParcloSerif-Medium.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-style: normal;
	font-weight: 500;
	font-display: swap;
	src: url('/fonts/ParcloSerif-Regular.woff') format('woff'),
		url('/fonts/ParcloSerif-Regular.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-style: normal;
	font-weight: 500;
	font-style: italic;
	font-display: swap;
	src: url('/fonts/ParcloSerif-Italic.woff') format('woff'),
		url('/fonts/ParcloSerif-Italic.woff2') format('woff2');
}
@font-face {
	font-family: 'Parclo';
	font-style: normal;
	font-weight: 300;
	font-display: swap;
	src: url('/fonts/ParcloSerif-Light.woff') format('woff'),
		url('/fonts/ParcloSerif-Light.woff2') format('woff2');
}

/* Write your global styles here, in PostCSS syntax */
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

body {
  /* @apply font-sans; */
  @apply font-serif;
  @apply bg-white;
  @apply text-stone-800;
  font-size: 1.2em;
  line-height: 1.66em;
  letter-spacing: -0.006em;

  --a1: #3498db;
  --a2: #1abc9c;
  --a3: #f39c12;
  --tc: #1c1917;
  --grey1: #78716c;
}
@media (max-width: 800px) {
  body {
    font-size: 1em;
  }
}

h1 {
  @apply font-serif;
  margin: 1.5em 0 1em;
  font-size: 3em;
  font-weight: 800;
  line-height: 1.05em;
}
h2 {
  @apply font-serif;
  margin: 2.5em 0 0.8em;
  font-size: 2.5em;
  font-style: italic;
  font-weight: 700;
  line-height: 1.3em;
}
h3 {
  @apply font-serif;
  margin: 2.7em 0 0.8em;
  font-size: 1.5em;
  font-weight: 700;
  line-height: 1.3em;
}
@media (max-width: 800px) {
  h1 {
    font-size: 2.5em;
  }
  h2 {
    font-size: 1.7em;
  }
  h3 {
    font-size: 1.3em;
  }
}
h4 {
  @apply font-serif;
  margin: 2rem 0 0.6rem;
  font-size: 1.6em;
  font-weight: 900;
  line-height: 1.3em;
}
h5 {
  margin: 2rem 0 0.6rem;
  font-size: 1.3em;
  font-weight: 900;
  line-height: 1.3em;
  letter-spacing: -0.018em;
}
h6 {
  margin: 1rem 0 0.6rem;
  font-size: 1em;
  font-weight: 900;
  line-height: 1.3em;
}

p {
  margin-bottom: 1.2em;
}

ul,
ol {
  margin: 1.6em 0 1.6em 1em;
}

li {
  margin: 0.6em 0;
}

ul {
  list-style: disc;
}

li::marker {
  content: '-  ';
  color: var(--a1);
}

a {
  @apply text-stone-600;
  background: rgba(255, 255, 255, 1);
  padding: 0.1em 0.3em;
  margin: -0.1em -0.3em;
}

a:visited {
  @apply text-teal-600;
}

blockquote {
  font-style: italic;
  border-left: 3px solid var(--a1);
  padding: 0.6em 1.6em;
  margin-left: 0;
}

hr {
  @apply bg-white;
  height: 1px;
  padding: 0;
  appearance: none;
  margin: 6em 0;
  outline: none;
  border: none;
}
.white hr {
  @apply bg-stone-100;
}

.button:not(.plain),
button:not(.plain) {
  appearance: none;
  padding: 0.7em 1.3em;
  font-size: 1em;
  background: var(--a1);
  color: white;
  border: 1px solid var(--a1);
  font-family: "Inter", sans-serif;
  letter-spacing: 0.05em;
  font-size: 0.8em;
  text-transform: uppercase;
  text-decoration: none;
  border-radius: 0;
  cursor: pointer;
}

.plain {
  appearance: none;
  background: none;
  text-align: left;
  border: none;
  box-shadow: none;
  font-size: 1em;
  font-family: "Inter", sans-serif;
  cursor: pointer;
  padding: 0.4em 1em;
}

.container {
  max-width: min(57em, 90vw);
  min-height: 90vh;
  margin: 0 auto;
}

.breakout {
  margin-left: calc((-100vw + 50em) / 2);
  width: 100vw;
}

pre {
  background-color: #f9f9f9;
  box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.05);
  padding: 0.5em;
  border-radius: 2px;
  overflow-x: auto;
}

pre code {
  background-color: transparent;
  padding: 0;
}

p + blockquote {
  margin-top: 3em;
}
blockquote {
  padding: 2em 2em;
  @apply bg-stone-100;
  @apply text-stone-700;
  font-style: normal;
  border: none;
}

blockquote strong {
  @apply text-stone-900;
}

ul {
  line-height: 1.5;
}

ol {
  margin-top: -0.5em;
}

li {
  margin: 0 0 0.5em 0;
}
.content > video,
.content > img {
  display: block;
  max-width: 100%;
  margin: 2em auto;
  text-align: center;
}
em {
  font-style: italic;
}
strong {
  font-weight: 700;
  color: #242424;
}

blockquote {
  margin-bottom: 2em;
}
blockquote > p {
  margin-bottom: 0;
}
blockquote > p + p {
  margin-top: 1em;
}

.heading-link:before {
  content: "#";
}
.heading-link {
  position: absolute;
  margin-left: -1em;
  font-weight: 300;
  font-size: 0.8em;
  text-decoration: none;
}

/* .header-link {
  }
  .header-link:before {
    content: "#";
  } */

  img,
  video {
    margin-left: auto;
    margin-right: auto;
  }

p + img,
p + video {
  margin-top: 2em;
}

img + p,
video + p {
  margin-top: 2em;
}

.katex-display {
  max-width: 100%;
  overflow-x: auto;
  padding: 2em 0;
}

